--- a/style.css
+++ b/style.css
@@ -112,51 +112,11 @@ nav ul li a:hover::after{
 }
 
 .tab-titles{
-    display: flex;
-    margin: 20px 0 40px;
-}
-
-.tab-links{
-    margin-right: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
-}
-
-.tab-links::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #FD2525;
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transition: 0.5s;
-}
-
-.tab-links.active-link::after{
-    width: 50%;
-}
-
-.tab-contents ul li{
-    list-style: none;
-    line-height: 25px;
-    margin: 10px 0;
-    font-size: 15px;
-}
-
-.tab-contents ul li span{
-    color: #ab2a2a;
-    font-size: 20px;
+    display: none;
 }
 
 .tab-contents{
     display: none;
-}
-
-.tab-contents.active-tab{
-    display: block;
 }
 
 /*timeline*/
@@ -509,14 +469,24 @@ nav .fa-solid{
 /*--css for small screen--*/
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/phone-background.png);
+        background-image: url("images/profile-pic.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: 110%;
+        background-position-y: 25%;
+        background-size: 50%;
     }
     .header-text{
-        margin-top: 100%;
+        margin-top: 35%;
+        margin-right: 40%;
+        line-height: 25px;
         font-size: 16px;
     }
     .header-text h1{
-        font-size: 30px;
+        font-size: 18px;
+    }
+    .header-text p{
+        font-size: 18px;
     }
     nav .fa-solid{
         display: block;
@@ -544,7 +514,8 @@ nav .fa-solid{
         cursor: pointer;
     }
     .sub-title{
-        font-size: 40px; 
+        font-size: 30px; 
+        margin-top: -180px;
     }
     .about-col-1, .about-col-2{
         flex-basis: 100%;
@@ -558,7 +529,90 @@ nav .fa-solid{
     .tab-links{
         font-size: 16px;
         margin-right: 20px;
+        font-weight: 500;
+        cursor: pointer;
+        position: relative;
     }
+    .tab-contents ul li{
+        list-style: none;
+        line-height: 25px;
+        font-size: 15px;
+        color: #FD2525;
+    }
+    .tab-contents ul li span{
+        color: #d9d9d9;
+        font-size: 14px;
+        justify-content: flex-end;    
+    }
+    .tab-contents ul li p{
+        color: #d9d9d9;
+        margin-top: 5px;
+        line-height: 20px;
+        font-size: 14px;
+    }
+    .tab-contents ol li{
+        color: #d9d9d9;
+        margin-top: 0px;
+        line-height: 20px;
+        font-size: 11.5px;
+        text-align: justify;
+        list-style-type: disc;
+    }
+    .tab-titles{
+        display: flex;
+    }
+    .tab-links{
+        margin-right: 50px;
+        font-size: 18px;
+        font-weight: 500;
+        cursor: pointer;
+        position: relative;
+    }
+    .tab-links::after{
+        content: '';
+        width: 0;
+        height: 3px;
+        background: #FD2525;
+        position: absolute;
+        left: 0;
+        bottom: -8px;
+        transition: 0.5s;
+    }
+    .tab-links.active-link::after{
+        width: 50%;
+    }
+    .tab-contents{
+        display: none;
+    }
+    .tab-contents.active-tab{
+        display: block;
+    }
+    .timeline{
+        display: none;
+    }
+    .skills-list{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-gap: 20px;
+        margin-top: 30px;
+        perspective: 1000px; 
+    }
+    .skill-card .front h2{
+        font-size: 25px;
+    }
+    #portfolio{
+        margin-top: 25%; 
+    }
+    #contact{
+        margin-top: 150px; 
+    }
+    .work-list{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-gap: 30px;
+        margin-top: 30px;
+    }
+
     .contact-left, .contact-right{
         flex-basis: 100%;
     }
